--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
 
     <section class="page-title">
       <div class="container">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <div class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         
         <button type="button" class="button">Order Service</button>
+      </div>
       </div>
     </section>
 
