--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <!-- додала box-icon -->
             <div class="box-icon">
               <svg class="features-icon" width="64" height="64">
-                <use href="images/icons.svg#icon-antenna"></use>
+                <use href="#icon-antenna"></use>
               </svg>
               </div>
 
@@ -94,7 +94,7 @@
 <!-- додала box-icon -->
             <div class="box-icon">
               <svg class="features-icon" width="64" height="64">
-                <use href="images/icons.svg#icon-clock"></use>
+                <use href="#icon-clock"></use>
               </svg>
               </div>
           <!--  -->
@@ -108,7 +108,7 @@
   <!-- додала box-icon -->
             <div class="box-icon">
               <svg class="features-icon" width="64" height="64">
-                <use href="images/icons.svg#icon-diagram"></use>
+                <use href="#icon-diagram"></use>
               </svg>
               </div>
           <!--  -->
@@ -122,7 +122,7 @@
   <!-- додала box-icon -->
             <div class="box-icon">
               <svg class="features-icon" width="64" height="64">
-                <use href="images/icons.svg#icon-astronaut"></use>
+                <use href="#icon-astronaut"></use>
               </svg>
               </div>
         <!--  -->
