--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           Web<span class="studio">Studio</span></a>
 
         <ul class="page-nav">
-          <li><a href="./index.html" class="nav-link">Studio</a></li>
+          <li><a href="./index.html" class="nav-link current">Studio</a></li>
           <li><a href="" class="nav-link">Portfolio</a></li>
           <li><a href="" class="nav-link">Contacts</a></li>
         </ul>
