--- a/index.html
+++ b/index.html
@@ -247,6 +247,13 @@
             <div class="portfolio-img-wrapper">
 
             <img src="./images/img7.jpg" alt="Meditation App" />
+
+            <!-- додаю зміни параграф -->
+            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+              Exotic Fruit Ecommerce App · Cloud Storage App
+            </p>
+            </div>
+            <!-- --- -->
             <div class="app-title">
               <h3 class="app-h3">Meditation App</h3>
               <p class="app-text">App</p>
@@ -295,7 +302,7 @@
 
             <!-- додаю зміни -->
             <div class="portfolio-img-wrapper">
-              
+
             <img src="./images/img10.jpg" alt="Online Courses" />
 
             <!-- додаю зміни параграф -->
