--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <li class="features-section">
             <div class="box-icon">
               <svg class="features-icon" width="64" height="64">
-                <use href="#icon-antenna"></use>
+                <use href="./images/icons.svg#icon-antenna"></use>
               </svg>
               </div>
 
@@ -91,7 +91,7 @@
           <li class="features-section">
             <div class="box-icon">
               <svg class="features-icon" width="64" height="64">
-                <use href="#icon-clock"></use>
+                <use href="./images/icons.svg#icon-clock"></use>
               </svg>
               </div>
             <h3 class="features-title">Punctuality</h3>
@@ -102,7 +102,7 @@
           <li class="features-section">
             <div class="box-icon">
               <svg class="features-icon" width="64" height="64">
-                <use href="#icon-diagram"></use>
+                <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
               </div>
             <h3 class="features-title">Diligence</h3>
@@ -113,7 +113,7 @@
           <li class="features-section">
             <div class="box-icon">
               <svg class="features-icon" width="64" height="64">
-                <use href="#icon-astronaut"></use>
+                <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
               </div>
             <h3 class="features-title">Technologies</h3>
