--- a/index.html
+++ b/index.html
@@ -143,28 +143,29 @@
               <li class="social-item">
                 <a href="./index.html" target="_blank" class="social-link">
                   <svg class="social-icon" width="16" height="16">
-                 <use href="./images/icons.svg#instagram"></use>
+                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
               </a>
               </li>
-              <li class="social-item">
-                <a href="./index.html" class="link-social">
-                  <svg class="social-icon" width="16" height="16">
-                    <use href="./images/icons.svg#twitter"></use>
-                  </svg>
+                </li>
+                <li class="social-item">
+                  <a href="./index.html" target="_blank" class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
                   </a>
-              </li>
-                <li class="social-team">
-              <a href="./index.html" class="link-social">
+                </li>
+                <li class="social-item">
+              <a href="./index.html" target="_blank" class="social-link">
                 <svg class="social-icon" width="16" height="16">
-                  <use href="./images/icons.svg#facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
                 </a>
             </li>
-              <li class="social-team">
-              <a href="./index.html" class="link-social">
+              <li class="social-item">
+              <a href="./index.html" target="_blank" class="social-link">
                 <svg class="social-icon" width="16" height="16">
-                  <use href="./images/icons.svg#linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin2"></use>
                 </svg>
                 </a>
             </li>
@@ -185,28 +186,28 @@
                 <li class="social-item">
                   <a href="./index.html" target="_blank" class="social-link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-item">
-                  <a href="./index.html" class="link-social">
+                  <a href="./index.html" target="_blank" class="social-link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-team">
-                  <a href="./index.html" class="link-social">
+                <li class="social-item">
+                  <a href="./index.html" target="_blank" class="social-link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-team">
-                  <a href="./index.html" class="link-social">
+                <li class="social-item">
+                  <a href="./index.html" target="_blank" class="social-link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin2"></use>
                     </svg>
                   </a>
                 </li>
@@ -228,28 +229,28 @@
                 <li class="social-item">
                   <a href="./index.html" target="_blank" class="social-link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-item">
-                  <a href="./index.html" class="link-social">
+                  <a href="./index.html" target="_blank" class="social-link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-team">
-                  <a href="./index.html" class="link-social">
+                <li class="social-item">
+                  <a href="./index.html" target="_blank" class="social-link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-team">
-                  <a href="./index.html" class="link-social">
+                <li class="social-item">
+                  <a href="./index.html" target="_blank" class="social-link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin2"></use>
                     </svg>
                   </a>
                 </li>
@@ -270,28 +271,28 @@
                 <li class="social-item">
                   <a href="./index.html" target="_blank" class="social-link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-item">
-                  <a href="./index.html" class="link-social">
+                  <a href="./index.html" target="_blank" class="social-link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-team">
-                  <a href="./index.html" class="link-social">
+                <li class="social-item">
+                  <a href="./index.html" target="_blank" class="social-link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-team">
-                  <a href="./index.html" class="link-social">
+                <li class="social-item">
+                  <a href="./index.html" target="_blank" class="social-link">
                     <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin2"></use>
                     </svg>
                   </a>
                 </li>
@@ -428,10 +429,10 @@
       <!-- іконки -->
       <ul class="social-media-list">
         <!--  (li)  іконками соцмереж -->
-        <li><a href="#" >Instagram</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">LinkedIn</a></li>
+        <li><a href="./index.html" >Instagram</a></li>
+        <li><a href="./index.html">Twitter</a></li>
+        <li><a href="./index.html">Facebook</a></li>
+        <li><a href="./index.html">LinkedIn</a></li>
       </ul>
 
     </div>
