--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
 
     <section class="page-title">
       <div class="container">
-        <div class="hero">
+        <!-- видаляю div class="hero  -->
+        
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button">Order Service</button>
-        </div>
+        
       </div>
     </section>
 
